// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTimestamp component renders correctly for a timestamp over a year 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#FFFFFF",
        "fontSize": 12,
      },
      undefined,
    ]
  }
>
  December 4, 2016
</Text>
`;

exports[`EventTimestamp component renders correctly for a timestamp within a week 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#FFFFFF",
        "fontSize": 12,
      },
      undefined,
    ]
  }
>
  August 4
</Text>
`;

exports[`EventTimestamp component renders correctly for a timestamp within a year 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#FFFFFF",
        "fontSize": 12,
      },
      undefined,
    ]
  }
>
  December 4
</Text>
`;
